# flexrpl-discord-bot

./: .env.example  .env.settings  .gitignore  .sonarcloud.properties  Dockerfile  PRIVACY_POLICY.md  Procfile  README.md  TERMS_OF_SERVICE.md  app.py  config.py  format_and_lint.sh  railway.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml  discord-push-notifications.yml
src/: main.py
src/bot/: __init__.py  bot.py  commands.py  events.py
src/handlers/: github_webhook.py
src/routes/: discord.py
src/utils/: formatting.py
tests/: conftest.py  test_bot.py  test_commands.py  test_discord_routes.py  test_events.py  test_formatting.py  test_main.py
