[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist
per-file-ignores =
    # Ignore missing docstrings in tests
    tests/*:D100,D101,D102,D103

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=src --cov-report=term-missing
asyncio_mode = auto
asyncio_default_fixture_loop_scope = function
pythonpath = .

[options.extras_require]
test =
    httpx>=0.24.0
    pytest>=8.0.0
    pytest-asyncio>=0.23.0
    pytest-cov>=4.1.0
